k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 2048-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/hostname: "game.eks.yasinhirsi.com"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - game.eks.yasinhirsi.com
      secretName: 2048-tls
  rules:
    - host: game.eks.yasinhirsi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eks-service
                port:
                  number: 80
